Fix FAQ section vertical alignment - position images and text to meet properly
- Added top: 470px to FAQ2 image so it starts where FAQ1 image ends
- Added margin-top: 470px to FAQ2 heading to align text with image
- Updated starburst position to top: 420px to center at image meeting point
- Updated mobile starburst position accordingly

The images now meet edge-to-edge vertically at the viewport center,
matching the original site layout.

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1927,6 +1927,7 @@ main > .section.faq-block-1 > .default-content-wrapper > p:has(img) {
 /* Second FAQ block - image left, text right */
 main > .section.faq-block-2 > .default-content-wrapper > h2 {
   margin-left: calc(50% + 98px);
+  margin-top: 470px;
 }
 
 main > .section.faq-block-2 > .default-content-wrapper > p:not(.button-container):not(:has(picture)):not(:has(img)) {
@@ -1943,7 +1944,7 @@ main > .section.faq-block-2 > .default-content-wrapper > p:has(img) {
   position: absolute;
   left: auto;
   right: 50%;
-  top: 0;
+  top: 470px;
   width: 50%;
   margin: 0;
   max-width: none;
@@ -2062,7 +2063,7 @@ main > .section.starburst {
 main > .section.starburst::before {
   content: '';
   position: absolute;
-  top: -50px;
+  top: 420px;
   left: 50%;
   transform: translateX(-50%);
   width: 100px;
@@ -2119,7 +2120,7 @@ main > .section.starburst::before {
   main > .section.starburst::before {
     width: 60px;
     height: 60px;
-    top: -30px;
+    top: 200px;
   }
 }
 
